crates/aimee_app/src/dto/openai/snapshots/aimee_app__dto__openai__request__tests__tool_message_with_special_chars.snap
---
source: crates/aimee_app/src/dto/openai/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "{\n                \"html\": \"<div class=\\\"container\\\"><p>Hello <World></p></div>\",\n                \"elements\": [\"<span>\", \"<br/>\", \"<hr>\"],\n                \"attributes\": {\n                    \"style\": \"color: blue; font-size: 12px;\",\n                    \"data-test\": \"<test>&value</test>\"\n                }\n            }",
  "name": "html_tool",
  "tool_call_id": "456"
}
